Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2011
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.6.xx
DATE xx/xx/2011
47th Alpha Release

NEWS:

NEW: [features/improvements]

BUG FIXES:
+Fix middle mouse button not closing correct tab when notebook view has been split.

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.6.77
DATE 10/02/2011
46th Alpha Release

NEWS:

Just a rebuild of 0.6.76 to fix some system compatibility issues that some ran
in to while using the new Windows binaries.

#-----------------------------------------------------------------------------#

VERSION 0.6.76
DATE 10/01/2011
45th Alpha Release

NEWS:

New in this release is the new Session Manager bar for managing editing sessions.
Along with the Session Manager the session feature has had a change to its
behavior, only the Default session will automatically update. All other custom
sessions require explicit saves to configure the set of files that belong in it.
See the changelog below for details of other changes and bug fixes that are
included in this release.


NEW: [features/improvements]
+Allow scrolling of the buffer from within the search bar with up/down keys.
+Can now change lexer from status bar context menu.
+Session management feature behavior has been changed in this release. When using
custom sessions they will not automatically be saved as new files are opened or
when the editor is closed. They must now be saved manually. Only the builtin
'Default' session will retain the automatic behavior.
+Support folding docstrings in Python source code.
+Add Command Bar for managing editing sessions, default key binding of Ctrl+K.
+Add Delete All button to Bookmark manager Shelf window.
+Add close all option to shelf tab right click menu.
+New version of Launch Plugin (Bug fixes)